k8s/app-manifest/j26-interactive-screens/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: j26-interactive-screens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-interactive-screens
  template:
    metadata:
      labels:
        app: j26-interactive-screens
    spec:
      containers:
        - name: j26-interactive-screens-app
          image: ghcr.io/scouterna/j26-interactive-screens-v2:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: j26-interactive-screens-kv-csi
