k8s/app-manifest/j26-interactive-screens/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-interactive-screens
spec:
  selector:
    app: j26-interactive-screens
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
